--- a/src/app/Pages/pedidos/pedidos.page.html
+++ b/src/app/Pages/pedidos/pedidos.page.html
@@ -4,3 +4,19 @@
       <app-search-pedido></app-search-pedido>
 
 </ion-content>
+<ion-footer>
+      <ion-tab-bar slot="bottom" >
+        <ion-tab-button [routerLink]="['/pedidos']">
+          <ion-icon name="home-sharp"></ion-icon>
+          Menú pedidos
+        </ion-tab-button >
+        <ion-tab-button [routerLink]="['/main']">
+          <ion-icon name="radio"></ion-icon>
+          principal
+        </ion-tab-button>
+        <ion-tab-button [routerLink]="['/prods']">
+          <ion-icon name="library"></ion-icon>
+          Menú carta
+        </ion-tab-button>
+      </ion-tab-bar>
+    </ion-footer>
