--- a/src/app/Pages/prods/prods.page.html
+++ b/src/app/Pages/prods/prods.page.html
@@ -3,3 +3,19 @@
 <ion-content [fullscreen]="true">
       <app-crud-prod></app-crud-prod>
 </ion-content>
+<ion-footer>
+      <ion-tab-bar slot="bottom" >
+        <ion-tab-button [routerLink]="['/pedidos']">
+          <ion-icon name="home-sharp"></ion-icon>
+          Menú pedidos
+        </ion-tab-button >
+        <ion-tab-button [routerLink]="['/main']">
+          <ion-icon name="radio"></ion-icon>
+          principal
+        </ion-tab-button>
+        <ion-tab-button [routerLink]="['/prods']">
+          <ion-icon name="library"></ion-icon>
+          Menú carta
+        </ion-tab-button>
+      </ion-tab-bar>
+    </ion-footer>
