--- a/src/app/Components/crud-prod/crud-prod.component.scss
+++ b/src/app/Components/crud-prod/crud-prod.component.scss
@@ -1,3 +1,36 @@
-ion-input{
-    margin: 5%;
-}
+
+
+
+  ion-content{
+
+    --background: linear-gradient( #FDC858 20%,white 10% ,white 20% , white 50%);
+  }
+
+.card-todo{
+    
+    right: 10px;
+    width: 100%;
+    height: auto;
+    border-radius: 30px 30px 0px 0px;
+    box-shadow: 0 0 0 0;
+  }
+
+
+  .boton_bienvenido{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-top: 50px;
+    margin-left: 20px;
+    
+  }
+
+  .boton_bienvenido ion-button{
+    --background: #FDC858;
+    --background-activated:#FFB84D;
+    --background-hover:#FFB84D;
+    --color:#FF5C00;
+    width: 150px;
+    height: 50px;
+    --border-radius: 25px;
+  }
