--- a/src/app/Pages/main/main.page.html
+++ b/src/app/Pages/main/main.page.html
@@ -1,31 +1,32 @@
 
-<ion-content>
-  <div *ngIf="repartidor$ | async as admin; else loading">
-    <ion-card>
-    <h1>{{ admin[0].nombre }} {{ admin[0].apellido }}</h1>
-    <p><strong>Teléfono:</strong> {{ admin[0].telefono }}</p>
-  </ion-card>
+<ion-content [fullscreen]="true">
+  <div style=" margin-left: 100px; color: white ; margin-top: 20px;  ">
+    <font size="6"> Mi Tienda</font>
   </div>
-  <ng-template #loading>
-    <p>Cargando datos del repartidor...</p>
-  </ng-template>
-
+  <ion-card class="card-todo">
+    <div *ngIf="repartidor$ | async as admin; else loading">
+      
+      <h1>{{ admin[0].nombre }} {{ admin[0].apellido }}</h1>
+      <p><strong>Teléfono:</strong> {{ admin[0].telefono }}</p>
+   
+    </div>
+    <ng-template #loading>
+      <p>Cargando datos del repartidor...</p>
+    </ng-template>
+  </ion-card>
 </ion-content>
 
-<ion-footer>
+
   <ion-tab-bar slot="bottom" >
-    <ion-tab-button [routerLink]="['/pedidos']">
-      <ion-icon name="home-sharp"></ion-icon>
-      Menú pedidos
+    <ion-tab-button [routerLink]="['/pedidos']"  >
+      <ion-icon name="receipt-outline" style="width: 30px; height: 30px;"></ion-icon>
     </ion-tab-button >
-    <ion-tab-button [routerLink]="['/main']">
-      <ion-icon name="radio"></ion-icon>
-      principal
+    <ion-tab-button [routerLink]="['/main']" >
+      <ion-icon name="storefront-outline"style="width: 30px; height: 30px;"></ion-icon>
     </ion-tab-button>
-    <ion-tab-button [routerLink]="['/prods']">
-      <ion-icon name="library"></ion-icon>
-      Menú carta
+    <ion-tab-button [routerLink]="['/prods']" >
+      <ion-icon name="restaurant-outline"style="width: 30px; height: 30px;"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
-</ion-footer>
+
 
