--- a/src/app/Pages/main/main.page.scss
+++ b/src/app/Pages/main/main.page.scss
@@ -1,4 +1,19 @@
+ion-tab-bar{
+  --background: #FF5C00;
+  border-radius: 30px 30px 0px 0px;
+  --color: white;
+}
+
 ion-content{
 
-    --ion-background-color:#fdfffe; 
-  }
+  --background: linear-gradient( #FDC858 21%,white 9% ,white 20% , white 50%);
+}
+
+.card-todo{
+  
+  right: 10px;
+  width: 100%;
+  height: auto;
+  border-radius: 30px 30px 0px 0px;
+  box-shadow: 0 0 0 0;
+}
