--- a/src/app/Components/registro/registro.component.html
+++ b/src/app/Components/registro/registro.component.html
@@ -8,14 +8,14 @@
       <nav >
         <form (ngSubmit)="register()">
           <div style="margin-top: 30px;">
-            <label for="" style="margin:20px; font-family: Verdana, Geneva, Tahoma, sans-serif; ">Nombre</label>
-            <label for="" style="margin-left:86px; font-family: Verdana, Geneva, Tahoma, sans-serif; ">Apellido</label>
+            <label for="" style="margin:20px; font-family: Verdana, Geneva, Tahoma, sans-serif; ">  Nombre</label>
+            <label for="" style="margin-left:60px; font-family: Verdana, Geneva, Tahoma, sans-serif; ">  Apellido</label>
           </div>
           <nav style="display: flex; justify-content: space-between;">
             
         <div class="login-1">
           <div >
-            <ion-input [(ngModel)]="admin.nombre" name="nombre"  type="text" placeholder="Nombre" required style="left: 10%;"></ion-input>
+            <ion-input [(ngModel)]="admin.nombre" name="nombre"  type="text" placeholder="Nombre" required style="left: 10%;width: 140px;"></ion-input>
           </div>
         </div>
       
