--- a/src/app/Components/crud-prod/crud-prod.component.scss
+++ b/src/app/Components/crud-prod/crud-prod.component.scss
@@ -8,7 +8,7 @@
 
 .card-todo{
     
-    right: 10px;
+    right: 18px;
     width: 100%;
     height: auto;
     border-radius: 30px 30px 0px 0px;
@@ -21,7 +21,7 @@
     flex-direction: row;
     gap: 10px;
     margin-top: 50px;
-    margin-left: 20px;
+    margin-left: 40px;
     
   }
 
@@ -33,4 +33,46 @@
     width: 150px;
     height: 50px;
     --border-radius: 25px;
+  }
+
+  .iconos-boton{
+    width: 30px;
+  height: 30px;
+  --color:#FF5C00;
+  border-radius: 13px;
+  margin-top: -32px;
+  margin-left: 40px;
+  background-color: rgba(240, 248, 255, 0);
+  box-shadow: 0 0 0 0;
+  position: absolute;
+  }
+
+  .imagen img{
+    border-radius: 20px;
+    margin: 40px;
+    height: 180px;
+    width: 180px;
+  object-fit: cover;
+  margin-left: 100px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  }
+
+  .subir-foto{
+    width: 40px;
+    height: 40px;
+    border-radius: 25px;
+    background-color: #FF5C00;
+    margin-top: -59px;
+    margin-left: 260px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  }
+
+  .imagenes img{
+    border-radius: 20px;
+    margin: 40px;
+    height: 180px;
+    width: 320px;
+  object-fit: cover;
+  margin-left: 40px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   }
