--- a/src/app/Components/registro/registro.component.scss
+++ b/src/app/Components/registro/registro.component.scss
@@ -5,7 +5,7 @@ ion-content{
   
   .card-todo{
     
-    right: 10px;
+    right: 18px;
     width: 100%;
     height: 82%;
     top: 150px;
@@ -48,6 +48,8 @@ ion-content{
   
   .boton-si ion-button{
     --background: #FF5C00;
+    --background-activated:#FFB84D;
+    --background-hover:#FFB84D;
       --color:#FDC858;
       width: 200px;
       height: 50px;
