--- a/src/app/Pages/inic/inic.page.scss
+++ b/src/app/Pages/inic/inic.page.scss
@@ -7,12 +7,9 @@
 
 }
 .tamano{
-    padding: 5%;
-    height:25%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-
+    margin-top: 10px;
+    height:30px;
+    text-align: center;
 
     
 }
@@ -32,6 +29,21 @@ ion-content{
     height:13%;
     margin: 10%
   }
+
+  .boton-si{
+    margin-top: 70px;
+    margin-left: 22%;
+}
+
+.boton-si ion-button{
+  --background: #FF5C00;
+  --background-activated:#FFB84D;
+    --background-hover:#FFB84D;
+    --color:#FDC858;
+    width: 200px;
+    height: 50px;
+    --border-radius: 25px;
+}
 
 
   
